<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blurry_gradient">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="314dp"
            android:layout_height="510dp"
            app:cardBackgroundColor="#0000"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/material_on_primary_disabled"
                android:elevation="50dp">

                <EditText
                    android:id="@+id/usuarioRegistro"
                    android:layout_width="254dp"
                    android:layout_height="68dp"
                    android:ems="10"
                    android:hint="@string/usuario_registro_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.067" />

                <EditText
                    android:id="@+id/contraseñaRegistro"
                    android:layout_width="254dp"
                    android:layout_height="68dp"
                    android:ems="10"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailRegistro"
                    app:layout_constraintVertical_bias="0.038" />

                <EditText
                    android:id="@+id/repiteContraseñaRegistro"
                    android:layout_width="254dp"
                    android:layout_height="68dp"
                    android:ems="10"
                    android:hint="@string/repetir_contrasena"
                    android:inputType="textPassword"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contraseñaRegistro"
                    app:layout_constraintVertical_bias="0.103" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registrar"
                    android:layout_width="256dp"
                    android:layout_height="54dp"
                    android:background="@layout/button_style"
                    android:backgroundTintMode="multiply"
                    android:text="@string/registro"
                    android:textColor="@color/white"
                    app:cornerRadius="40px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintVertical_bias="0.213"
                    app:strokeColor="#FFFFFF"
                    app:strokeWidth="1dp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:background="#939292"
                    android:backgroundTint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.515"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repiteContraseñaRegistro"
                    app:layout_constraintVertical_bias="0.122" />

                <TextView
                    android:id="@+id/registro_a_inicio_sesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuenta_creada"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.947" />

                <EditText
                    android:id="@+id/emailRegistro"
                    android:layout_width="254dp"
                    android:layout_height="68dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FBFBFB"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usuarioRegistro"
                    app:layout_constraintVertical_bias="0.043" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="WorkIt"
            android:textColor="#FFFFFF"
            android:textSize="90sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.116" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>